--- a/Tasky/TaskyAndroid/TaskyAndroid.csproj
+++ b/Tasky/TaskyAndroid/TaskyAndroid.csproj
@@ -18,7 +18,6 @@
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
-    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -32,11 +31,11 @@
     <AndroidLinkMode>None</AndroidLinkMode>
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
     <AndroidSupportedAbis>armeabi-v7a;x86</AndroidSupportedAbis>
-<AndroidKeyStore>True</AndroidKeyStore>
 <AndroidSigningKeyStore>/Users/pchopra/Projects/parth-mobile-samples/Tasky/Tasky.keystore</AndroidSigningKeyStore>
 <AndroidSigningStorePass>*Sarita1989*</AndroidSigningStorePass>
 <AndroidSigningKeyAlias>Tasky</AndroidSigningKeyAlias>
 <AndroidSigningKeyPass>*Sarita1989*</AndroidSigningKeyPass>
+<AndroidUseAapt2>true</AndroidUseAapt2>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -45,6 +44,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>False</ConsolePause>
+<AndroidUseAapt2>true</AndroidUseAapt2>
+<EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
