Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,26 @@ variables:
 
 steps:
 - task: NuGetToolInstaller@1
+  displayName: 'Nuget Init'
 
 - task: NuGetCommand@2
+  displayName: 'Nuget Restore'
   inputs:
+    command: 'restore'
     restoreSolution: '**/*.sln'
 
 - task: XamarinAndroid@1
+  displayName: 'Build Android'
   inputs:
-    projectFile: '**/*droid*.csproj'
-    outputDirectory: '$(outputDirectory)'
-    configuration: '$(buildConfiguration)'
+    projectFile: 'Tasky/TaskyAndroid/TaskyAndroid.csproj'
+    outputDirectory: 'Tasky/$(outputDirectory)'
+    configuration: 'Tasky/$(buildConfiguration)'
+
+
+- task: AndroidSigning@3
+  inputs:
+    apkFiles: 'Tasky/**/*.apk'
+    apksignerKeystoreFile: 'Tasky/Tasky.keystore'
+    apksignerKeystorePassword: '*Sarita1989*'
+    apksignerKeystoreAlias: 'Tasky'
+    apksignerKeyPassword: '*Sarita1989*'
